src/backend/parser/sql.output
Nonterminals useless in grammar

    opt_as_alias
    table_factor
    opt_inner_cross
    opt_outer
    left_or_right
    opt_left_or_right_outer
    opt_join_condition
    join_condition
    index_hint
    opt_for_join
    index_list
    table_subquery


Terminals unused in grammar

    ADD
    ALTER
    ANALYZE
    BEFORE
    CALL
    CASCADE
    CHANGE
    CHECK
    COLUMN
    CONDITION
    CONSTRAINT
    CONTINUE
    CONVERT
    CROSS
    CURRENT_USER
    CURSOR
    DATABASES
    DECLARE
    DESCRIBE
    DETERMINISTIC
    DISTINCT
    DISTINCTROW
    DIV
    DROP
    DUAL
    EACH
    ELSEIF
    EXIT
    EXPLAIN
    FETCH
    FORCE
    FOREIGN
    GRANT
    INFILE
    INNER
    INOUT
    INSENSITIVE
    ITERATE
    JOIN
    KEYS
    KILL
    LEAVE
    LEFT
    LINES
    LOAD
    LOCALTIME
    LOCALTIMESTAMP
    LOCK
    LONG
    LOOP
    MATCH
    MINUTE_MICROSECOND
    MINUTE_SECOND
    MODIFIES
    NATURAL
    NO_WRITE_TO_BINLOG
    NUMBER
    ON
    OPTIMIZE
    OPTION
    OPTIONALLY
    OUT
    OUTER
    OUTFILE
    PRECISION
    PROCEDURE
    PURGE
    READ
    READS
    REFERENCES
    RELEASE
    RENAME
    REPEAT
    REQUIRE
    RESTRICT
    RETURN
    REVOKE
    RIGHT
    SCHEMAS
    SECOND_MICROSECOND
    SENSITIVE
    SEPARATOR
    SHOW
    SONAME
    SPATIAL
    SPECIFIC
    SQL
    SQLEXCEPTION
    SQLSTATE
    SQLWARNING
    SQL_BIG_RESULT
    SQL_CALC_FOUND_ROWS
    SQL_SMALL_RESULT
    SSL
    STARTING
    STRAIGHT_JOIN
    TERMINATED
    TO
    TRIGGER
    UNDO
    UNION
    UNLOCK
    USAGE
    USE
    UTC_DATE
    UTC_TIME
    UTC_TIMESTAMP
    VARYING
    WHILE
    WRITE
    ESCAPED


Rules useless in grammar

  264 opt_as_alias: AS NAME
  265             | NAME
  266             | ε

  267 table_factor: NAME opt_as_alias index_hint
  268             | NAME '.' NAME opt_as_alias index_hint
  269             | table_subquery opt_as NAME
  270             | '(' table_references ')'

  271 opt_inner_cross: ε
  272                | INNER
  273                | CROSS

  274 opt_outer: ε
  275          | OUTER

  276 left_or_right: LEFT
  277              | RIGHT

  278 opt_left_or_right_outer: LEFT opt_outer
  279                        | RIGHT opt_outer
  280                        | ε

  281 opt_join_condition: ε
  282                   | join_condition

  283 join_condition: ON expr
  284               | USING '(' column_list ')'

  285 index_hint: USE KEY opt_for_join '(' index_list ')'
  286           | IGNORE KEY opt_for_join '(' index_list ')'
  287           | FORCE KEY opt_for_join '(' index_list ')'
  288           | ε

  289 opt_for_join: FOR JOIN
  290             | ε

  291 index_list: NAME
  292           | index_list ',' NAME

  293 table_subquery: '(' select_stmt ')'


State 65 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce
State 313 conflicts: 1 reduce/reduce
State 425 conflicts: 1 reduce/reduce


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt ';'
    2          | stmt_list stmt ';'

    3 expr: NAME
    4     | NAME '.' NAME
    5     | USERVAR
    6     | STRING
    7     | INTNUM
    8     | APPROXNUM
    9     | BOOL
   10     | expr '+' expr
   11     | expr '-' expr
   12     | expr '*' expr
   13     | expr '/' expr
   14     | expr '%' expr
   15     | expr MOD expr
   16     | '-' expr
   17     | expr ANDOP expr
   18     | expr OR expr
   19     | expr XOR expr
   20     | expr '|' expr
   21     | expr '&' expr
   22     | expr '^' expr
   23     | expr SHIFT expr
   24     | NOT expr
   25     | '!' expr
   26     | expr EQUAL expr
   27     | expr NOT_EQUAL expr
   28     | expr MORE expr
   29     | expr MORE_OR_EQUAL expr
   30     | expr LESS expr
   31     | expr LESS_OR_EQUAL expr
   32     | expr COMPARISON expr
   33     | expr COMPARISON '(' select_stmt ')'
   34     | expr COMPARISON ANY '(' select_stmt ')'
   35     | expr COMPARISON SOME '(' select_stmt ')'
   36     | expr COMPARISON ALL '(' select_stmt ')'
   37     | expr IS NULLX
   38     | expr IS NOT NULLX
   39     | expr IS BOOL
   40     | expr IS NOT BOOL
   41     | USERVAR ASSIGN expr
   42     | expr BETWEEN expr AND expr

   43 val_list: expr
   44         | expr ',' val_list

   45 opt_val_list: ε
   46             | val_list

   47 expr: expr IN '(' val_list ')'
   48     | expr NOT IN '(' val_list ')'
   49     | expr IN '(' select_stmt ')'
   50     | expr NOT IN '(' select_stmt ')'
   51     | EXISTS '(' select_stmt ')'
   52     | NAME '(' opt_val_list ')'
   53     | FCOUNT '(' '*' ')'
   54     | FCOUNT '(' expr ')'
   55     | FSUBSTRING '(' val_list ')'
   56     | FSUBSTRING '(' expr FROM expr ')'
   57     | FSUBSTRING '(' expr FROM expr FOR expr ')'
   58     | FTRIM '(' val_list ')'
   59     | FTRIM '(' trim_ltb expr FROM val_list ')'

   60 trim_ltb: LEADING
   61         | TRAILING
   62         | BOTH

   63 expr: FDATE_ADD '(' expr ',' interval_exp ')'
   64     | FDATE_SUB '(' expr ',' interval_exp ')'

   65 interval_exp: INTERVAL expr DAY_HOUR
   66             | INTERVAL expr DAY_MICROSECOND
   67             | INTERVAL expr DAY_MINUTE
   68             | INTERVAL expr DAY_SECOND
   69             | INTERVAL expr YEAR_MONTH
   70             | INTERVAL expr YEAR
   71             | INTERVAL expr HOUR_MICROSECOND
   72             | INTERVAL expr HOUR_MINUTE
   73             | INTERVAL expr HOUR_SECOND

   74 expr: CASE expr case_list END
   75     | CASE expr case_list ELSE expr END
   76     | CASE case_list END
   77     | CASE case_list ELSE expr END

   78 case_list: WHEN expr THEN expr
   79          | case_list WHEN expr THEN expr

   80 expr: expr LIKE expr
   81     | expr NOT LIKE expr
   82     | expr REGEXP expr
   83     | expr NOT REGEXP expr
   84     | CURRENT_TIMESTAMP
   85     | CURRENT_DATE
   86     | CURRENT_TIME
   87     | BINARY expr

   88 stmt: select_stmt

   89 select_stmt: ε
   90            | state_select select_expr_list state_from table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

   91 state_where: ε
   92            | WHERE

   93 opt_where: ε
   94          | state_where expr

   95 opt_groupby: ε
   96            | GROUP BY groupby_list opt_with_rollup

   97 state_select: SELECT

   98 select_expr_list: select_expr
   99                 | select_expr_list ',' select_expr
  100                 | '*'

  101 select_expr: NAME

  102 state_from: FROM

  103 table_references: ε
  104                 | NAME

  105 groupby_list: expr opt_asc_desc
  106             | groupby_list ',' expr opt_asc_desc

  107 opt_asc_desc: ε
  108             | ASC
  109             | DESC

  110 opt_with_rollup: ε
  111                | WITH ROLLUP

  112 opt_having: ε
  113           | HAVING expr

  114 opt_orderby: ε
  115            | ORDER BY groupby_list

  116 opt_limit: ε
  117          | LIMIT expr
  118          | LIMIT expr ',' expr

  119 opt_into_list: ε
  120              | INTO column_list

  121 column_list: NAME
  122            | column_list ',' NAME

  123 opt_as: AS
  124       | ε

  125 stmt: delete_stmt

  126 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

  127 delete_opts: delete_opts LOW_PRIORITY
  128            | delete_opts QUICK
  129            | delete_opts IGNORE
  130            | ε

  131 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

  132 delete_list: NAME opt_dot_star
  133            | delete_list ',' NAME opt_dot_star

  134 opt_dot_star: ε
  135             | '.' '*'

  136 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

  137 stmt: insert_stmt

  138 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate

  139 opt_ondupupdate: ε
  140                | ONDUPLICATE KEY UPDATE insert_asgn_list

  141 insert_opts: ε
  142            | insert_opts LOW_PRIORITY
  143            | insert_opts DELAYED
  144            | insert_opts HIGH_PRIORITY
  145            | insert_opts IGNORE

  146 opt_into: INTO
  147         | ε

  148 opt_col_names: ε
  149              | '(' column_list ')'

  150 insert_vals_list: '(' insert_vals ')'
  151                 | insert_vals_list ',' '(' insert_vals ')'

  152 insert_vals: expr
  153            | DEFAULT
  154            | insert_vals ',' expr
  155            | insert_vals ',' DEFAULT

  156 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate

  157 insert_asgn_list: NAME COMPARISON expr
  158                 | NAME COMPARISON DEFAULT
  159                 | insert_asgn_list ',' NAME COMPARISON expr
  160                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

  161 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  162 stmt: replace_stmt

  163 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  164             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  165             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  166 stmt: update_stmt

  167 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  168 update_opts: ε
  169            | insert_opts LOW_PRIORITY
  170            | insert_opts IGNORE

  171 update_asgn_list: NAME COMPARISON expr
  172                 | NAME '.' NAME COMPARISON expr
  173                 | update_asgn_list ',' NAME COMPARISON expr
  174                 | update_asgn_list ',' NAME '.' NAME COMPARISON expr

  175 stmt: create_database_stmt

  176 create_database_stmt: CREATE DATABASE opt_if_not_exists NAME
  177                     | CREATE SCHEMA opt_if_not_exists NAME

  178 opt_if_not_exists: ε
  179                  | IF EXISTS

  180 stmt: create_table_stmt

  181 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  182                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  183                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  184                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  185                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  186                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

  187 opt_temporary: ε
  188              | TEMPORARY

  189 create_col_list: create_definition
  190                | create_col_list ',' create_definition

  191 create_definition: PRIMARY KEY '(' column_list ')'
  192                  | KEY '(' column_list ')'
  193                  | INDEX '(' column_list ')'
  194                  | FULLTEXT INDEX '(' column_list ')'
  195                  | FULLTEXT KEY '(' column_list ')'

  196 $@1: ε

  197 create_definition: $@1 NAME data_type column_atts

  198 column_atts: ε
  199            | column_atts NOT NULLX
  200            | column_atts NULLX
  201            | column_atts DEFAULT STRING
  202            | column_atts DEFAULT INTNUM
  203            | column_atts DEFAULT APPROXNUM
  204            | column_atts DEFAULT BOOL
  205            | column_atts AUTO_INCREMENT
  206            | column_atts UNIQUE '(' column_list ')'
  207            | column_atts UNIQUE KEY
  208            | column_atts PRIMARY KEY
  209            | column_atts KEY
  210            | column_atts COMMENT STRING

  211 opt_length: ε
  212           | '(' INTNUM ')'
  213           | '(' INTNUM ',' INTNUM ')'

  214 opt_binary: ε
  215           | BINARY

  216 opt_uz: ε
  217       | opt_uz UNSIGNED
  218       | opt_uz ZEROFILL

  219 opt_csc: ε
  220        | opt_csc CHAR SET STRING
  221        | opt_csc COLLATE STRING

  222 data_type: BIT opt_length
  223          | TINYINT opt_length opt_uz
  224          | SMALLINT opt_length opt_uz
  225          | MEDIUMINT opt_length opt_uz
  226          | INT opt_length opt_uz
  227          | INTEGER opt_length opt_uz
  228          | BIGINT opt_length opt_uz
  229          | REAL opt_length opt_uz
  230          | DOUBLE opt_length opt_uz
  231          | FLOAT opt_length opt_uz
  232          | DECIMAL opt_length opt_uz
  233          | DATE
  234          | TIME
  235          | TIMESTAMP
  236          | DATETIME
  237          | YEAR
  238          | CHAR opt_length opt_csc
  239          | VARCHAR '(' INTNUM ')' opt_csc
  240          | BINARY opt_length
  241          | VARBINARY '(' INTNUM ')'
  242          | TINYBLOB
  243          | BLOB
  244          | MEDIUMBLOB
  245          | LONGBLOB
  246          | TINYTEXT opt_binary opt_csc
  247          | TEXT opt_binary opt_csc
  248          | MEDIUMTEXT opt_binary opt_csc
  249          | LONGTEXT opt_binary opt_csc
  250          | ENUM '(' enum_list ')' opt_csc
  251          | SET '(' enum_list ')' opt_csc

  252 enum_list: STRING
  253          | enum_list ',' STRING

  254 create_select_statement: opt_ignore_replace opt_as select_stmt

  255 opt_ignore_replace: ε
  256                   | IGNORE
  257                   | REPLACE

  258 stmt: set_stmt

  259 set_stmt: SET set_list

  260 set_list: set_expr
  261         | set_list ',' set_expr

  262 set_expr: USERVAR COMPARISON expr
  263         | USERVAR ASSIGN expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 25
    '%' (37) 14
    '&' (38) 21
    '(' (40) 33 34 35 36 47 48 49 50 51 52 53 54 55 56 57 58 59 63 64 149 150 151 181 182 183 185 191 192 193 194 195 206 212 213 239 241 250 251
    ')' (41) 33 34 35 36 47 48 49 50 51 52 53 54 55 56 57 58 59 63 64 149 150 151 181 182 183 185 191 192 193 194 195 206 212 213 239 241 250 251
    '*' (42) 12 53 100 135
    '+' (43) 10
    ',' (44) 44 63 64 99 106 118 122 133 151 154 155 159 160 173 174 190 213 253 261
    '-' (45) 11 16
    '.' (46) 4 135 172 174 182 185 186
    '/' (47) 13
    ';' (59) 1 2
    '^' (94) 22
    '|' (124) 20
    error (256)
    NAME <strval> (258) 3 4 52 101 104 121 122 126 132 133 138 156 157 158 159 160 161 163 164 165 171 172 173 174 176 177 181 182 183 184 185 186 197
    STRING <strval> (259) 6 201 210 220 221 252 253
    INTNUM <intval> (260) 7 202 212 213 239 241
    BOOL <intval> (261) 9 39 40 204
    APPROXNUM <floatval> (262) 8 203
    USERVAR <strval> (263) 5 41 262 263
    ASSIGN (264) 41 263
    OR (265) 18
    XOR (266) 19
    ANDOP (267) 17
    IN (268) 47 48 49 50
    IS (269) 37 38 39 40
    LIKE (270) 80 81
    REGEXP (271) 82 83
    NOT (272) 24 38 40 48 50 81 83 199
    BETWEEN (273) 42
    COMPARISON <subtok> (274) 32 33 34 35 36 157 158 159 160 171 172 173 174 262
    SHIFT <subtok> (275) 23
    MOD (276) 15
    EQUAL (277) 26
    MORE_OR_EQUAL (278) 29
    MORE (279) 28
    LESS_OR_EQUAL (280) 31
    LESS (281) 30
    NOT_EQUAL (282) 27
    UMINUS (283)
    ADD (284)
    ALL (285) 36
    ALTER (286)
    ANALYZE (287)
    AND (288) 42
    ANY (289) 34
    AS (290) 123
    ASC (291) 108
    AUTO_INCREMENT (292) 205
    BEFORE (293)
    BIGINT (294) 228
    BINARY (295) 87 215 240
    BIT (296) 222
    BLOB (297) 243
    BOTH (298) 62
    BY (299) 96 115
    CALL (300)
    CASCADE (301)
    CASE (302) 74 75 76 77
    CHANGE (303)
    CHAR (304) 220 238
    CHECK (305)
    COLLATE (306) 221
    COLUMN (307)
    COMMENT (308) 210
    CONDITION (309)
    CONSTRAINT (310)
    CONTINUE (311)
    CONVERT (312)
    CREATE (313) 176 177 181 182 183 184 185 186
    CROSS (314)
    CURRENT_DATE (315) 85
    CURRENT_TIME (316) 86
    CURRENT_TIMESTAMP (317) 84
    CURRENT_USER (318)
    CURSOR (319)
    DATABASE (320) 176
    DATABASES (321)
    DATE (322) 233
    DATETIME (323) 236
    DAY_HOUR (324) 65
    DAY_MICROSECOND (325) 66
    DAY_MINUTE (326) 67
    DAY_SECOND (327) 68
    DECIMAL (328) 232
    DECLARE (329)
    DEFAULT (330) 153 155 158 160 201 202 203 204
    DELAYED (331) 143
    DELETE (332) 126 131 136
    DESC (333) 109
    DESCRIBE (334)
    DETERMINISTIC (335)
    DISTINCT (336)
    DISTINCTROW (337)
    DIV (338)
    DOUBLE (339) 230
    DROP (340)
    DUAL (341)
    EACH (342)
    ELSE (343) 75 77
    ELSEIF (344)
    END (345) 74 75 76 77
    ENUM (346) 250
    EXIT (347)
    EXPLAIN (348)
    FETCH (349)
    FLOAT (350) 231
    FOR (351) 57
    FORCE (352)
    FOREIGN (353)
    FROM (354) 56 57 59 102 126 131 136
    FULLTEXT (355) 194 195
    GRANT (356)
    GROUP (357) 96
    HAVING (358) 113
    HIGH_PRIORITY (359) 144
    HOUR_MICROSECOND (360) 71
    HOUR_MINUTE (361) 72
    HOUR_SECOND (362) 73
    IF (363) 179
    IGNORE (364) 129 145 170 256
    INFILE (365)
    INDEX (366) 193 194
    INNER (367)
    INOUT (368)
    INSENSITIVE (369)
    INSERT (370) 138 156 161
    INT (371) 226
    INTEGER (372) 227
    INTERVAL (373) 65 66 67 68 69 70 71 72 73
    INTO (374) 120 146
    ITERATE (375)
    JOIN (376)
    KEY (377) 140 191 192 195 207 208 209
    KEYS (378)
    KILL (379)
    LEADING (380) 60
    LEAVE (381)
    LEFT (382)
    LIMIT (383) 117 118
    LINES (384)
    LOAD (385)
    LOCALTIME (386)
    LOCALTIMESTAMP (387)
    LOCK (388)
    LONG (389)
    LONGBLOB (390) 245
    LONGTEXT (391) 249
    LOOP (392)
    LOW_PRIORITY (393) 127 142 169
    MATCH (394)
    MEDIUMBLOB (395) 244
    MEDIUMINT (396) 225
    MEDIUMTEXT (397) 248
    MINUTE_MICROSECOND (398)
    MINUTE_SECOND (399)
    MODIFIES (400)
    NATURAL (401)
    NO_WRITE_TO_BINLOG (402)
    NULLX (403) 37 38 199 200
    NUMBER (404)
    ON (405)
    ONDUPLICATE (406) 140
    OPTIMIZE (407)
    OPTION (408)
    OPTIONALLY (409)
    ORDER (410) 115
    OUT (411)
    OUTER (412)
    OUTFILE (413)
    PRECISION (414)
    PRIMARY (415) 191 208
    PROCEDURE (416)
    PURGE (417)
    QUICK (418) 128
    READ (419)
    READS (420)
    REAL (421) 229
    REFERENCES (422)
    RELEASE (423)
    RENAME (424)
    REPEAT (425)
    REPLACE (426) 163 164 165 257
    REQUIRE (427)
    RESTRICT (428)
    RETURN (429)
    REVOKE (430)
    RIGHT (431)
    ROLLUP (432) 111
    SCHEMA (433) 177
    SCHEMAS (434)
    SECOND_MICROSECOND (435)
    SELECT (436) 97
    SENSITIVE (437)
    SEPARATOR (438)
    SET (439) 156 164 167 220 251 259
    SHOW (440)
    SMALLINT (441) 224
    SOME (442) 35
    SONAME (443)
    SPATIAL (444)
    SPECIFIC (445)
    SQL (446)
    SQLEXCEPTION (447)
    SQLSTATE (448)
    SQLWARNING (449)
    SQL_BIG_RESULT (450)
    SQL_CALC_FOUND_ROWS (451)
    SQL_SMALL_RESULT (452)
    SSL (453)
    STARTING (454)
    STRAIGHT_JOIN (455)
    TABLE (456) 181 182 183 184 185 186
    TEMPORARY (457) 188
    TERMINATED (458)
    TEXT (459) 247
    THEN (460) 78 79
    TIME (461) 234
    TIMESTAMP (462) 235
    TINYBLOB (463) 242
    TINYINT (464) 223
    TINYTEXT (465) 246
    TO (466)
    TRAILING (467) 61
    TRIGGER (468)
    UNDO (469)
    UNION (470)
    UNIQUE (471) 206 207
    UNLOCK (472)
    UNSIGNED (473) 217
    UPDATE (474) 140 167
    USAGE (475)
    USE (476)
    USING (477) 136
    UTC_DATE (478)
    UTC_TIME (479)
    UTC_TIMESTAMP (480)
    VALUES (481) 138 163
    VARBINARY (482) 241
    VARCHAR (483) 239
    VARYING (484)
    WHEN (485) 78 79
    WHERE (486) 92
    WHILE (487)
    WITH (488) 111
    WRITE (489)
    YEAR (490) 70 237
    YEAR_MONTH (491) 69
    ZEROFILL (492) 218
    ESCAPED (493)
    EXISTS <subtok> (494) 51 179
    FSUBSTRING (495) 55 56 57
    FTRIM (496) 58 59
    FDATE_ADD (497) 63
    FDATE_SUB (498) 64
    FCOUNT (499) 53 54


Nonterminals, with rules where they appear

    $accept (259)
        on left: 0
    stmt_list (260)
        on left: 1 2
        on right: 0 2
    expr (261)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 47 48 49 50 51 52 53 54 55 56 57 58 59 63 64 74 75 76 77 80 81 82 83 84 85 86 87
        on right: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 47 48 49 50 54 56 57 59 63 64 65 66 67 68 69 70 71 72 73 74 75 77 78 79 80 81 82 83 87 94 105 106 113 117 118 152 154 157 159 171 172 173 174 262 263
    val_list <intval> (262)
        on left: 43 44
        on right: 44 46 47 48 55 58 59
    opt_val_list <intval> (263)
        on left: 45 46
        on right: 52
    trim_ltb (264)
        on left: 60 61 62
        on right: 59
    interval_exp (265)
        on left: 65 66 67 68 69 70 71 72 73
        on right: 63 64
    case_list <intval> (266)
        on left: 78 79
        on right: 74 75 76 77 79
    stmt (267)
        on left: 88 125 137 162 166 175 180 258
        on right: 1 2
    select_stmt (268)
        on left: 89 90
        on right: 33 34 35 36 49 50 51 88 161 165 254
    state_where (269)
        on left: 91 92
        on right: 94
    opt_where (270)
        on left: 93 94
        on right: 90 126 131 136 167
    opt_groupby (271)
        on left: 95 96
        on right: 90
    state_select (272)
        on left: 97
        on right: 90
    select_expr_list <intval> (273)
        on left: 98 99 100
        on right: 90 99
    select_expr (274)
        on left: 101
        on right: 98 99
    state_from (275)
        on left: 102
        on right: 90
    table_references <intval> (276)
        on left: 103 104
        on right: 90 131 136 167
    groupby_list <intval> (277)
        on left: 105 106
        on right: 96 106 115
    opt_asc_desc <intval> (278)
        on left: 107 108 109
        on right: 105 106
    opt_with_rollup <intval> (279)
        on left: 110 111
        on right: 96
    opt_having (280)
        on left: 112 113
        on right: 90
    opt_orderby (281)
        on left: 114 115
        on right: 90 126 167
    opt_limit (282)
        on left: 116 117 118
        on right: 90 126 167
    opt_into_list (283)
        on left: 119 120
        on right: 90
    column_list <intval> (284)
        on left: 121 122
        on right: 120 122 149 191 192 193 194 195 206
    opt_as (285)
        on left: 123 124
        on right: 254
    delete_stmt (286)
        on left: 126 131 136
        on right: 125
    delete_opts <intval> (287)
        on left: 127 128 129 130
        on right: 126 127 128 129 131 136
    delete_list <intval> (288)
        on left: 132 133
        on right: 131 133 136
    opt_dot_star (289)
        on left: 134 135
        on right: 132 133
    insert_stmt (290)
        on left: 138 156 161
        on right: 137
    opt_ondupupdate (291)
        on left: 139 140
        on right: 138 156 161 163 164 165
    insert_opts <intval> (292)
        on left: 141 142 143 144 145
        on right: 138 142 143 144 145 156 161 163 164 165 169 170
    opt_into (293)
        on left: 146 147
        on right: 138 156 161 163 164 165
    opt_col_names (294)
        on left: 148 149
        on right: 138 161 163 165
    insert_vals_list <intval> (295)
        on left: 150 151
        on right: 138 151 163
    insert_vals <intval> (296)
        on left: 152 153 154 155
        on right: 150 151 154 155
    insert_asgn_list <intval> (297)
        on left: 157 158 159 160
        on right: 140 156 159 160 164
    replace_stmt (298)
        on left: 163 164 165
        on right: 162
    update_stmt (299)
        on left: 167
        on right: 166
    update_opts <intval> (300)
        on left: 168 169 170
        on right: 167
    update_asgn_list <intval> (301)
        on left: 171 172 173 174
        on right: 167 173 174
    create_database_stmt (302)
        on left: 176 177
        on right: 175
    opt_if_not_exists <intval> (303)
        on left: 178 179
        on right: 176 177 181 182 183 184 185 186
    create_table_stmt (304)
        on left: 181 182 183 184 185 186
        on right: 180
    opt_temporary <intval> (305)
        on left: 187 188
        on right: 181 182 183 184 185 186
    create_col_list <intval> (306)
        on left: 189 190
        on right: 181 182 183 185 190
    create_definition (307)
        on left: 191 192 193 194 195 197
        on right: 189 190
    $@1 (308)
        on left: 196
        on right: 197
    column_atts <intval> (309)
        on left: 198 199 200 201 202 203 204 205 206 207 208 209 210
        on right: 197 199 200 201 202 203 204 205 206 207 208 209 210
    opt_length <intval> (310)
        on left: 211 212 213
        on right: 222 223 224 225 226 227 228 229 230 231 232 238 240
    opt_binary <intval> (311)
        on left: 214 215
        on right: 246 247 248 249
    opt_uz <intval> (312)
        on left: 216 217 218
        on right: 217 218 223 224 225 226 227 228 229 230 231 232
    opt_csc (313)
        on left: 219 220 221
        on right: 220 221 238 239 246 247 248 249 250 251
    data_type <intval> (314)
        on left: 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251
        on right: 197
    enum_list <intval> (315)
        on left: 252 253
        on right: 250 251 253
    create_select_statement (316)
        on left: 254
        on right: 183 184 185 186
    opt_ignore_replace <intval> (317)
        on left: 255 256 257
        on right: 254
    set_stmt (318)
        on left: 259
        on right: 258
    set_list (319)
        on left: 260 261
        on right: 259 261
    set_expr (320)
        on left: 262 263
        on right: 260 261


State 0

    0 $accept: • stmt_list $end

    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    $default  reduce using rule 89 (select_stmt)

    stmt_list             go to state 8
    stmt                  go to state 9
    select_stmt           go to state 10
    state_select          go to state 11
    delete_stmt           go to state 12
    insert_stmt           go to state 13
    replace_stmt          go to state 14
    update_stmt           go to state 15
    create_database_stmt  go to state 16
    create_table_stmt     go to state 17
    set_stmt              go to state 18


State 1

  176 create_database_stmt: CREATE • DATABASE opt_if_not_exists NAME
  177                     | CREATE • SCHEMA opt_if_not_exists NAME
  181 create_table_stmt: CREATE • opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  182                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  183                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  184                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  185                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  186                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

    DATABASE   shift, and go to state 19
    SCHEMA     shift, and go to state 20
    TEMPORARY  shift, and go to state 21

    $default  reduce using rule 187 (opt_temporary)

    opt_temporary  go to state 22


State 2

  126 delete_stmt: DELETE • delete_opts FROM NAME opt_where opt_orderby opt_limit
  131            | DELETE • delete_opts delete_list FROM table_references opt_where
  136            | DELETE • delete_opts FROM delete_list USING table_references opt_where

    $default  reduce using rule 130 (delete_opts)

    delete_opts  go to state 23


State 3

  138 insert_stmt: INSERT • insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  156            | INSERT • insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  161            | INSERT • insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 141 (insert_opts)

    insert_opts  go to state 24


State 4

  163 replace_stmt: REPLACE • insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  164             | REPLACE • insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  165             | REPLACE • insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 141 (insert_opts)

    insert_opts  go to state 25


State 5

   97 state_select: SELECT •

    $default  reduce using rule 97 (state_select)


State 6

  259 set_stmt: SET • set_list

    USERVAR  shift, and go to state 26

    set_list  go to state 27
    set_expr  go to state 28


State 7

  167 update_stmt: UPDATE • update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

    NAME      reduce using rule 168 (update_opts)
    SET       reduce using rule 168 (update_opts)
    $default  reduce using rule 141 (insert_opts)

    insert_opts  go to state 29
    update_opts  go to state 30


State 8

    0 $accept: stmt_list • $end
    2 stmt_list: stmt_list • stmt ';'

    $end     shift, and go to state 31
    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    $default  reduce using rule 89 (select_stmt)

    stmt                  go to state 32
    select_stmt           go to state 10
    state_select          go to state 11
    delete_stmt           go to state 12
    insert_stmt           go to state 13
    replace_stmt          go to state 14
    update_stmt           go to state 15
    create_database_stmt  go to state 16
    create_table_stmt     go to state 17
    set_stmt              go to state 18


State 9

    1 stmt_list: stmt • ';'

    ';'  shift, and go to state 33


State 10

   88 stmt: select_stmt •

    $default  reduce using rule 88 (stmt)


State 11

   90 select_stmt: state_select • select_expr_list state_from table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    NAME  shift, and go to state 34
    '*'   shift, and go to state 35

    select_expr_list  go to state 36
    select_expr       go to state 37


State 12

  125 stmt: delete_stmt •

    $default  reduce using rule 125 (stmt)


State 13

  137 stmt: insert_stmt •

    $default  reduce using rule 137 (stmt)


State 14

  162 stmt: replace_stmt •

    $default  reduce using rule 162 (stmt)


State 15

  166 stmt: update_stmt •

    $default  reduce using rule 166 (stmt)


State 16

  175 stmt: create_database_stmt •

    $default  reduce using rule 175 (stmt)


State 17

  180 stmt: create_table_stmt •

    $default  reduce using rule 180 (stmt)


State 18

  258 stmt: set_stmt •

    $default  reduce using rule 258 (stmt)


State 19

  176 create_database_stmt: CREATE DATABASE • opt_if_not_exists NAME

    IF  shift, and go to state 38

    $default  reduce using rule 178 (opt_if_not_exists)

    opt_if_not_exists  go to state 39


State 20

  177 create_database_stmt: CREATE SCHEMA • opt_if_not_exists NAME

    IF  shift, and go to state 38

    $default  reduce using rule 178 (opt_if_not_exists)

    opt_if_not_exists  go to state 40


State 21

  188 opt_temporary: TEMPORARY •

    $default  reduce using rule 188 (opt_temporary)


State 22
